--- a/express-backend/views/error.jade
+++ b/express-backend/views/error.jade
@@ -1,6 +1,7 @@
 extends layout
 
 block content
-  h1= message
+  title= title || 'Error'
+  h1= message || 'Error'
   h2= error.status
   pre #{error.stack}
